Prevent main sidebar toolbar to overlap with resizable panels handle

--- a/packages/app/src/components/page-editor/page-editor-sidebar/page-editor-sidebar.css
+++ b/packages/app/src/components/page-editor/page-editor-sidebar/page-editor-sidebar.css
@@ -17,7 +17,6 @@
 
 		position: sticky;
 		top: 0;
-		z-index: 1;
 
 		display: flex;
 		flex-direction: row;
